refactor: replace Supabase REST API with Spring Data JPA
- Removed SupabaseUserRepository, SupabaseValidStudentIdRepository, SupabaseProperties
- Added JPA annotations to User entity, created ValidStudentId entity
- UserRepository and ValidStudentIdRepository now extend JpaRepository
- Backend connects directly to Supabase PostgreSQL via JDBC
- Added springdoc-openapi (Swagger UI) dependency
- Updated application.yml, application.properties.example, and README